Ignore IDEA project file

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Various lock based and lock-free algorithms tested for multiple readers and writers scenarios.
+Various lock-based and lock-free algorithms tested for multiple readers and writers scenarios.
+
+The purpose is to show the performance differences of the approaches.
